# cpp_rag_llm

./: LICENSE  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile  Makefile
backend/include/: Authentication.hpp  ChromaClient.hpp  Connector.hpp  ConnectorString.hpp  DatabaseConnector.hpp  DocumentChain.hpp  OllamaEmbeddingFunction.hpp  UserRoutes.hpp
backend/scripts/: init_config.sh  sqlite_db_generator.sh
backend/src/: Authentication.cpp  ChromaClient.cpp  DocumentChain.cpp  UserRoutes.cpp  main.cpp
data/nginx/: nginx.conf
frontend/: Dockerfile  package.json
frontend/src/: App.js  index.js
frontend/src/components/: CollectionsManagement.js  FileForm.js  Forgot.js  Login.js  UserList.js
